--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - 0.*[0-9].*[0-9]
 
 env:
-  PY_VER: 3.11
+  PY_VER: 3.10
 
 jobs:
   publish:
@@ -37,7 +37,7 @@ jobs:
       - run: |
           pip install --upgrade pip
           pip install poetry==1.3.2
-          poetry install
+          poetry install --with docs
           poetry run make -C docs html
       - uses: s0/git-publish-subdir-action@develop
         env:
@@ -62,7 +62,7 @@ jobs:
       - run: |
           pip install --upgrade pip
           pip install poetry==1.3.2
-          poetry install
+          poetry install --with docs
           poetry run towncrier build --yes --version=${{ github.ref_name }}
           user=$(gh api /user)
           user_name=$(jq -r '.login' <<<"$user")
