--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
       - run: |
           pip install --upgrade pip
           pip install poetry==1.3.2
-          poetry install --only docs
+          poetry install --without test
           poetry run make -C docs html
       - uses: s0/git-publish-subdir-action@develop
         env:
@@ -59,7 +59,7 @@ jobs:
       - run: |
           pip install --upgrade pip
           pip install poetry==1.3.2
-          poetry install --only docs
+          poetry install --without test
           poetry run towncrier build --yes --version=${{ github.ref_name }}
           user=$(gh api /user)
           user_name=$(jq -r '.login' <<<"$user")
