--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,3 +71,5 @@ jobs:
           git config user.email "$user_email"
           git commit -m "Update changelog"
           git push origin HEAD:master
+        env:
+          GH_TOKEN: ${{ secrets.PAT }}
