--- a/docs/.readthedocs.yaml
+++ b/docs/.readthedocs.yaml
@@ -10,10 +10,10 @@ build:
   jobs:
     pre_create_environment:
       - python -m pip install --upgrade pip
-      - pip install poetry
-      - poetry config virtualenvs.create false
+      - python -m pip install poetry
+      - python -m poetry config virtualenvs.create false
     post_install:
-      - poetry install --only docs
+      - python -m poetry install --only docs
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
