--- a/docs/.readthedocs.yaml
+++ b/docs/.readthedocs.yaml
@@ -12,7 +12,7 @@ build:
       - python -m pip install --upgrade pip
       - python -m pip install poetry
       - python -m poetry config virtualenvs.create false
-    post_install:
+#    post_install:
       - python -m poetry install --only docs
 
 # Build documentation in the docs/ directory with Sphinx
