--- a/docs/.readthedocs.yaml
+++ b/docs/.readthedocs.yaml
@@ -9,11 +9,12 @@ build:
     python: "3.11"
   jobs:
     pre_create_environment:
-      - python -m pip install --upgrade pip
-      - python -m pip install poetry
-      - python -m poetry config virtualenvs.create false
-#    post_install:
-      - python -m poetry install --only docs
+      - asdf plugin add poetry
+      - asdf install poetry latest
+      - asdf global poetry latest
+      - poetry config virtualenvs.create false
+    post_install:
+      - poetry install --only docs
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
