dont use poetry

--- a/docs/.readthedocs.yaml
+++ b/docs/.readthedocs.yaml
@@ -1,22 +1,15 @@
-# .readthedocs.yaml
 version: 2
 
-# Set the version of Python and other tools you might need
-# https://github.com/python-poetry/poetry/issues/754#issuecomment-1111871973
 build:
-  os: ubuntu-22.04
+  os: "ubuntu-22.04"
   tools:
     python: "3.11"
-  jobs:
-    pre_create_environment:
-      - asdf plugin add poetry
-      - asdf install poetry latest
-      - asdf global poetry latest
-      - poetry config virtualenvs.create false
-    post_install:
-      - poetry install --only docs
 
-# Build documentation in the docs/ directory with Sphinx
+# Build from the docs/ directory with Sphinx
 sphinx:
   configuration: docs/conf.py
-  fail_on_warning: true
+
+# Explicitly set the version of Python and its requirements
+python:
+  install:
+    - requirements: docs/requirements.txt
