--- a/docs/.readthedocs.yaml
+++ b/docs/.readthedocs.yaml
@@ -8,10 +8,12 @@ build:
 # Build from the docs/ directory with Sphinx
 sphinx:
   configuration: docs/conf.py
+  fail_on_warning: true
 
 # Explicitly set the version of Python and its requirements
 python:
+  # Install our python package before building the docs
   install:
-    - requirements: docs/requirements.txt
     - method: pip
       path: .
+    - requirements: docs/requirements.txt
