--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,20 +20,17 @@ classifiers = [
 "Changelog" = "https://github.com/Megaputer/polyanalyst6api-py/blob/master/CHANGELOG.md"
 
 [tool.poetry.dependencies]
-python = "^3.6"
-requests = "^2.27"
+python = "^3.7"
+requests = "^2.31.0"
 pytus = "^0.2.1"
 
-[tool.poetry.dev-dependencies]
-black = "^20.8b1"
-
 [tool.poetry.group.test.dependencies]
-pytest = "^3.0"
+pytest = "^7.4.0"
 
 [tool.poetry.group.docs.dependencies]
-sphinx = "^5.3"
-sphinx-autodoc-typehints = "1.12.0"
-towncrier = "^21.9"
+sphinx = {version = "^7.0.1", python = "3.11"}
+towncrier = {version = "^23.6.0", python = "3.11"}
+sphinx-autodoc-typehints = {version = "^1.23.3", python = "3.11"}
 
 [tool.towncrier]
 package = "polyanalyst6api"
