Remove python restriction from towncrier package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ pytest = "^7.4.0"
 
 [tool.poetry.group.docs.dependencies]
 sphinx = {version = "^7.0.1", python = "3.11"}
-towncrier = {version = "^23.6.0", python = "3.11"}
+towncrier = "^23.6.0"
 sphinx-autodoc-typehints = {version = "^1.23.3", python = "3.11"}
 
 [tool.towncrier]
